fixed the stuffs

--- a/blender.html
+++ b/blender.html
@@ -13,14 +13,14 @@
             <br>btw, these images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
 
-        <img src="/blenders/ampersand.png" alt="ampersand">
-        <img src="/blenders/angle2.png" alt="angle2">
-        <img src="/blenders/arrow2.png" alt="arrow2">
-        <img src="/blenders/cloud.png" alt="cloud">
-        <img src="/blenders/cuberootof2.png" alt="cuberootof2">
-        <img src="/blenders/idk2.png" alt="idk2">
-        <img src="/blenders/lines.png" alt="lines">
-        <img src="/blenders/square.png" alt="square">
+        <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
+        <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
+        <img src="/mute-ante/blenders/arrow2.png" alt="arrow2" width="100%">
+        <img src="/mute-ante/blenders/cloud.png" alt="cloud" width="100%">
+        <img src="/mute-ante/blenders/cuberootof2.png" alt="cuberootof2" width="100%">
+        <img src="/mute-ante/blenders/idk2.png" alt="idk2" width="100%">
+        <img src="/mute-ante/blenders/lines.png" alt="lines" width="100%">
+        <img src="/mute-ante/blenders/square.png" alt="square" width="100%">
 
         <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
