--- a/interests.html
+++ b/interests.html
@@ -15,7 +15,7 @@
             <li><b>Language learning</b>: finding new ways to communicate things to others is always fun. I'm proficient in <a href="https://en.wikipedia.org/wiki/Toki_Pona"><b>toki pona</b></a>, a constructed language with 137 words. o kama sona e toki ni a!<br></li>
             <li><b>Coding things</b>: i'm most accustomed to working with Python (more specifically pygame) and, now that i have a website, some basic html and css.<br></li>
             <li><b>History</b>: it's important to know the past and its mistakes to not repeat them. Most interested in <a href="https://en.wikipedia.org/wiki/History_of_Brazil"><b>Brazillian history</b></a>, since it's my country of origin.<br></li>
-            <li><b>Drawing things</b>: i mostly make geometric things with <a href="https://en.wikipedia.org/wiki/Straightedge_and_compass_construction"><b>ruler and compass</b></a>, which is fun to work with given its limitations; though i also draw non-geometric things every now and again. I also like to use <a href="/blender.html">Blender</a> for 3d things.<br></li>
+            <li><b>Drawing things</b>: i mostly make geometric things with <a href="https://en.wikipedia.org/wiki/Straightedge_and_compass_construction"><b>ruler and compass</b></a>, which is fun to work with given its limitations; though i also draw non-geometric things every now and again. I also like to use <a href="/mute-ante/blender.html">Blender</a> for 3d things.<br></li>
             <li><b>Travelling</b>: seeing new places and people is great, as well as being relaxing and serving as inspiration for things.<br></li>
             <li><b>Ohter things</b>: listening to music, taking photos, chatting, making dumb music in Beepbox, flags, typography and design.<br></li>
             </ul>
