--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <li><a href="/mute-ante/blender"><b>blender things</b></a><br></li>
             <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a><br></li>
             <li><a href="/mute-ante/playlists"><b>my playlists</b></a><br></li>
-            <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li></ul>
+            <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li>
+            <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul>
         <h2><b>places i'm at</b></h2>
         <ul>
             <li><a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a><br></li>
