changed index layout

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             left: 50%;
             bottom: 50%;
             transform: translate(-50%, 50%);
-            grid-template-columns: auto 1px 47%;
+            grid-template-columns: auto 1px 60%;
             gap: 30px;
-            width: 500px;
+            width: 700px;
             padding: 20px;
             padding-top: 30px; padding-bottom: 30px;
             border: solid #F0F0F0 2px;
@@ -31,14 +31,14 @@
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p></div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left"><h2 style="margin-top: 0px;"><b>on-site things</b></h2>
-        <ul>
-            <li><a href="/mute-ante/interests"><b>my interests</b></a><br></li>
-            <li><a href="/mute-ante/musicians"><b>cool musicians</b></a><br></li>
-            <li><a href="/mute-ante/websites"><b>cool websites</b></a><br></li>
-            <li><a href="/mute-ante/blender"><b>blender things</b></a><br></li>
-            <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a><br></li>
-            <li><a href="/mute-ante/playlists"><b>my playlists</b></a><br></li>
-            <li><a href="/mute-ante/difference"><b>on difference</b></a><br></li>
+        <ul style="font-size: large;">
+            <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
+            <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
+            <li><a href="/mute-ante/websites"><b>websites</b></a> cool websites i've collected<br></li>
+            <li><a href="/mute-ante/blender"><b>blender</b></a> things i've made in blender<br></li>
+            <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
+            <li><a href="/mute-ante/playlists"><b>playlists</b></a> playlists i've made<br></li>
+            <li><a href="/mute-ante/difference"><b>difference</b></a> why it matters<br></li>
             <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul>
         <h2><b>places i'm at</b></h2>
         <ul>
