changed index layout again

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
 
     <body><div class="this-container">
         <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
-        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p></div>
+        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p><br>
+        <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b> ↲</a>
+        <a href="mailto:cvni1981@gmail.com"><b>email</b> ↲</a>
+        <a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b> ↲</a>
+        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b> ↲</a>
+        </div>
         <div style="border-left: solid 2px #F0F0F0"></div>
-        <div style="text-align: left"><h2 style="margin-top: 0px;"><b>on-site things</b></h2>
+        <div style="text-align: left">
         <ul style="font-size: large;">
             <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
             <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
@@ -39,12 +44,5 @@
             <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
             <li><a href="/mute-ante/playlists"><b>playlists</b></a> playlists i've made<br></li>
             <li><a href="/mute-ante/difference"><b>difference</b></a> why it matters<br></li>
-            <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul>
-        <h2><b>places i'm at</b></h2>
-        <ul>
-            <li><a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a><br></li>
-            <li><a href="mailto:cvni1981@gmail.com"><b>email</b></a></li>
-            <li><a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b></a><br></li>
-            <li><a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b></a><br></li>
-        </ul></div>
+            <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul></div>
     </div></body>
