--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p><br>
         <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b> ↲</a><br>
-        <a href="mailto:cvni1981@gmail.com"><b>email</b> ↲</a><br>v
+        <a href="mailto:cvni1981@gmail.com"><b>email</b> ↲</a><br>
         <a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b> ↲</a><br>
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b> ↲</a><br>
         </div>
