changed index again again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style></head>
 
     <body><div class="this-container">
-        <div style="text-align: right;"> <h1><b>cvni81<br>mute ante</b></h1>
+        <div style="text-align: right;padding-bottom: 10px;"> <h1><b>cvni81<br>mute ante</b></h1>
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p><br>
         <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b> ↲</a><br>
         <a href="mailto:cvni1981@gmail.com"><b>email</b> ↲</a><br>
@@ -35,7 +35,7 @@
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b> ↲</a><br>
         </div>
         <div style="border-left: solid 2px #F0F0F0"></div>
-        <div style="text-align: left">
+        <div style="text-align: left; display: flex; align-items: center;">
         <ul style="font-size: large;">
             <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
             <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
