--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left; display: flex; align-items: center;">
-        <ul style="font-size: large;">
+        <ul style="font-size: larger;">
             <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
             <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
             <li><a href="/mute-ante/websites"><b>websites</b></a> cool websites i've collected<br></li>
