--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <body><div class="this-container">
         <div style="text-align: right;padding-bottom: 10px;"> <h1><b>cvni81<br>mute ante</b></h1>
-        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p><br>
+        <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
         <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a> ↲<br>
         <a href="mailto:cvni1981@gmail.com"><b>email</b></a> ↲<br>
         <a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b></a> ↲<br>
