--- a/sitelog.html
+++ b/sitelog.html
@@ -8,8 +8,10 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1><b>→ site</b>🪵</h1><br>
+        <h1><b>→ sitelog</b></h1><br>
+        <h2><b>→ 12/8/2022 19:12</b></h2>
+        <p>Changed the index layout some. I think it's better.</p><br>
         <h2><b>→ 12/8/2022 17:42</b></h2>
-        <p>I just added the blender images and now this log so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
+        <p>I just added the blender images and now this log so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p><br>
         <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
