removed some line breaks because ocd

--- a/sitelog.html
+++ b/sitelog.html
@@ -10,8 +10,8 @@
     <body><div class="container">
         <h1><b>→ sitelog</b></h1><br>
         <h2><b>→ 12/8/2022 19:12</b></h2>
-        <p>Changed the index layout some. I think it's better.</p><br>
+        <p>Changed the index layout some. I think it's better.</p>
         <h2><b>→ 12/8/2022 17:42</b></h2>
-        <p>I just added the blender images and now this log so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p><br>
+        <p>I just added the blender images and now this log so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
         <p><a href="/mute-ante"> ⇤ go back</a></p>
     </div></body>
