--- a/websites/misc.html
+++ b/websites/misc.html
@@ -23,7 +23,7 @@
         <p>Browse through thousands of art pieces from many places, times and styles. Basically a giant online museum.</p>
 
         <h2><b>→ <a href="https://tasvideos.org/">TASVideos</a></b></h2>
-        <p>Look at tons of videogames being played perfectly with the help of tools (Tool-assistes speedrunning).</p>
+        <p>Look at tons of videogames being played perfectly with the help of tools (Tool-assisted speedrunning).</p>
 
         <h2><b>→ <a href="https://molview.org/">MolView</a></b></h2>
         <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!.</p>
