--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
         <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a> ↲<br>
         <a href="mailto:cvni1981@gmail.com"><b>email</b></a> ↲<br>
+        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify"><b>spotify</b></a> ↲<br>
         <a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b></a> ↲<br>
         <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b></a> ↲<br>
         </div>
@@ -42,7 +43,6 @@
             <li><a href="/mute-ante/websites"><b>websites</b></a> cool websites i've collected<br></li>
             <li><a href="/mute-ante/blender"><b>blender</b></a> things i've made in blender<br></li>
             <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
-            <li><a href="/mute-ante/playlists"><b>playlists</b></a> playlists i've made<br></li>
             <li><a href="/mute-ante/difference"><b>difference</b></a> why it matters<br></li>
             <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul></div>
     </div></body>
