changed bold text

--- a/blender.html
+++ b/blender.html
@@ -13,7 +13,7 @@
             <br>btw, these images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
-            <li style="background-color: #153886; color:#e1c185"><b><a href="/mute-ante/blenders/pyramids">pyramids</a> (4)</b></li>
+            <li><b style="background-color: #153886; color:#e1c185"><a href="/mute-ante/blenders/pyramids">pyramids</a> (4)</b></li>
         </ul>
         <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
         <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
