--- a/blender.html
+++ b/blender.html
@@ -23,7 +23,7 @@
             <br>btw, these images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
-            <li><b class="pyramid"><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids</a> (4)</b></li>
+            <li><b><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></b></li>
         </ul>
         <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
         <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
