--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -8,19 +8,12 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1><b>→ some things made in blender</b></h1>
-        <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. These are 8 of them.
-            <br>btw, these images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
-        </p>
+        <h1><b>→ pyramids</b></h1>
 
-        <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
-        <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
-        <img src="/mute-ante/blenders/arrow2.png" alt="arrow2" width="100%">
-        <img src="/mute-ante/blenders/cloud.png" alt="cloud" width="100%">
-        <img src="/mute-ante/blenders/cuberootof2.png" alt="cuberootof2" width="100%">
-        <img src="/mute-ante/blenders/idk2.png" alt="idk2" width="100%">
-        <img src="/mute-ante/blenders/lines.png" alt="lines" width="100%">
-        <img src="/mute-ante/blenders/square.png" alt="square" width="100%">
+        <img src="/mute-ante/blenders/pyramids/pyramids.png" alt="pyramids" width="100%">
+        <img src="/mute-ante/blenders/pyramids/pyramids2.png" alt="pyramids2" width="100%">
+        <img src="/mute-ante/blenders/pyramids/pyramids3.png" alt="pyramids3" width="100%">
+        <img src="/mute-ante/blenders/pyramids/pyramids4.png" alt="pyramids4" width="100%">
 
-        <p><a href="/mute-ante"> ⇤ go back</a></p>
+        <p><a href="/mute-ante/blender"> ⇤ go back</a></p>
     </div></body>
