--- a/blender.html
+++ b/blender.html
@@ -20,7 +20,7 @@
     <body><div class="container">
         <h1><b>→ some things made in blender</b></h1>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. These are 8 of them.
-            <br>btw, these images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
+            <br>btw, all the images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
             <li><b><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></b></li>
