changed pyramid colors

--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -5,7 +5,20 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+    
+    <style>
+        body {
+        background-color: #153886;
+        color: #e1c185;}
+        .container{
+            border: solid #e1c185 2px;}
+        a{color: #e1c185;}
+        a:hover{
+        background: #e1c185;
+        color: #153886;
+        text-decoration-color: #e1c185;}
+    </style></head>
 
     <body><div class="container">
         <h1><b>→ pyramids</b></h1>
