--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -9,15 +9,11 @@
     
     <style>
         body {
-        background-color: #153886;
+        background-color: #000429;
         color: #e1c185;}
         .container{
             border: solid #e1c185 2px;}
-        a{color: #e1c185;}
-        a:hover{
-        background: #e1c185;
-        color: #153886;
-        text-decoration-color: #e1c185;}
+        a{color: #f0f0f0; background-color: #080808;}
     </style></head>
 
     <body><div class="container">
