made all links bold and changed sitelog

--- a/sitelog.html
+++ b/sitelog.html
@@ -9,6 +9,8 @@
 
     <body><div class="container">
         <h1><b>→ sitelog</b></h1><br>
+        <h2><b>→ 14/8/2022 13:09</b></h2>
+        <p>I added some more blender things with purple/blue and yellow pyramids.</p>
         <h2><b>→ 12/8/2022 19:12</b></h2>
         <p>Changed the index layout some. I think it's better.</p>
         <h2><b>→ 12/8/2022 17:42</b></h2>
