starting to remove <b> tags

--- a/sitelog.html
+++ b/sitelog.html
@@ -8,12 +8,12 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1><b>→ sitelog</b></h1><br>
-        <h2><b>→ 14/8/2022 13:09</b></h2>
+        <h1>→ sitelog</h1><br>
+        <h2>→ 14/8/2022 13:09</h2>
         <p>I added some more blender things with purple/blue and yellow pyramids.</p>
-        <h2><b>→ 12/8/2022 19:12</b></h2>
+        <h2>→ 12/8/2022 19:12</h2>
         <p>Changed the index layout some. I think it's better.</p>
-        <h2><b>→ 12/8/2022 17:42</b></h2>
+        <h2>→ 12/8/2022 17:42</h2>
         <p>I just added the blender images and now this log so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
-        <p><a href="/mute-ante"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
