--- a/index.html
+++ b/index.html
@@ -27,22 +27,22 @@
     </style></head>
 
     <body><div class="this-container">
-        <div style="text-align: right;padding-bottom: 10px;"> <h1><b>cvni81<br>mute ante</b></h1>
+        <div style="text-align: right;padding-bottom: 10px;"> <h1>cvni81<br>mute ante</h1>
         <p>seize the day<br>pr-br, en, tok<br><18yo, they/them</p>
-        <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a> ↲<br>
-        <a href="mailto:cvni1981@gmail.com"><b>email</b></a> ↲<br>
-        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify"><b>spotify</b></a> ↲<br>
-        <a href="https://bandcamp.com/cvni1981" class="bandcamp"><b>bandcamp (fan)</b></a> ↲<br>
-        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube"><b>youtube</b></a> ↲<br>
+        <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> ↲<br>
+        <a href="mailto:cvni1981@gmail.com">email</a> ↲<br>
+        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify">spotify</a> ↲<br>
+        <a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp (fan)</a> ↲<br>
+        <a href="https://www.youtube.com/channel/UCSlbHKWNyJbId31FHbqB4uw" class="youtube">youtube</a> ↲<br>
         </div>
         <div style="border-left: solid 2px #F0F0F0"></div>
         <div style="text-align: left; display: flex; align-items: center;">
         <ul style="font-size: larger; padding-left: 20px">
-            <li><a href="/mute-ante/interests"><b>interests</b></a> things i'm interested in<br></li>
-            <li><a href="/mute-ante/musicians"><b>musicians</b></a> good music people<br></li>
-            <li><a href="/mute-ante/websites"><b>websites</b></a> cool websites i've collected<br></li>
-            <li><a href="/mute-ante/blender"><b>blender</b></a> things i've made in blender<br></li>
-            <li><a href="/mute-ante/nimi-mute"><b>nimi mute</b></a> texts in toki pona<br></li>
-            <li><a href="/mute-ante/difference"><b>difference</b></a> why it matters<br></li>
-            <li><a href="/mute-ante/sitelog"><b>sitelog</b></a><br></li></ul></div>
+            <li><a href="/mute-ante/interests">interests</a> things i'm interested in<br></li>
+            <li><a href="/mute-ante/musicians">musicians</a> good music people<br></li>
+            <li><a href="/mute-ante/websites">websites</a> cool websites i've collected<br></li>
+            <li><a href="/mute-ante/blender">blender</a> things i've made in blender<br></li>
+            <li><a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br></li>
+            <li><a href="/mute-ante/difference">difference</a> why it matters<br></li>
+            <li><a href="/mute-ante/sitelog">sitelog</a><br></li></ul></div>
     </div></body>
