--- a/websites.html
+++ b/websites.html
@@ -8,14 +8,14 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="centered-container">
-        <h1><b>→ cool websites</b></h1>
+        <h1>→ cool websites</h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
-        <h2><b>→ <a href="/mute-ante/websites/math">math and physics (15)</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/lang">language (5)</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/geo">geography and flags (4)</a></b></h2>
-        <h2><b>→ <a href="/mute-ante/websites/misc">miscellaneously interesting (11)</a></b></h2>
+        <h2>→ <a href="/mute-ante/websites/math">math and physics (15)</a></h2>
+        <h2>→ <a href="/mute-ante/websites/lang">language (5)</a></h2>
+        <h2>→ <a href="/mute-ante/websites/geo">geography and flags (4)</a></h2>
+        <h2>→ <a href="/mute-ante/websites/misc">miscellaneously interesting (11)</a></h2>
 
-        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a> or <a href="mailto:cvni1981@gmail.com"><b>email</b></a>!</p>
+        <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> or <a href="mailto:cvni1981@gmail.com">email</a>!</p>
 
         <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
