--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -8,16 +8,16 @@
     </head>
 
     <body><div class="centered-container">
-        <h1><b>nimi mute</b></h1>
+        <h1>nimi mute</h1>
         <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
-            <li><a href="/mute-ante/nimi-mute/tomo-ni"><b>tomo ni</b> (nimi 115)</a></li>
-            <li><a href="/mute-ante/nimi-mute/suno"><b>suno</b> (nimi 218)</a></li>
-            <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo"><b>len pi laso telo</b> (nimi 647)</a></li>
-            <li><a href="/mute-ante/nimi-mute/jan"><b>jan</b> (nimi 332)</a></li>
-            <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu"><b>tomo pi esun lipu</b> (nimi 860)</a></li>
+            <li><a href="/mute-ante/nimi-mute/tomo-ni">tomo ni (nimi 115)</a></li>
+            <li><a href="/mute-ante/nimi-mute/suno">suno (nimi 218)</a></li>
+            <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
+            <li><a href="/mute-ante/nimi-mute/jan">jan (nimi 332)</a></li>
+            <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
             </ul>
-        <p><a href="/mute-ante"> ⇤ o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante">o tawa monsi</a></p>
     </div></body>
