--- a/nimi-mute/suno.html
+++ b/nimi-mute/suno.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>suno</b></h1>
+        <h1>suno</h1>
         <p style="font-size: large; padding: 10px">
         tenpo mun.
         <br>mi mute li tawa.
@@ -75,6 +75,6 @@
         <br>kalama musi pi weka sona.
         <br>tawa ni: tawa pona.
         </p>
-        <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
     </div>
     </body>
