--- a/nimi-mute/tomo-pi-esun-lipu.html
+++ b/nimi-mute/tomo-pi-esun-lipu.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>tomo pi esun lipu</b></h1>
+        <h1>tomo pi esun lipu</h1>
         <p style="font-size: large; padding: 10px">
         toki a.
         <br>mi lon tomo pi esun lipu.
@@ -89,6 +89,6 @@
         <br>tenpo ni la mi lon tomo mi la, toki mi li pini.
         <br>mi wile e ni: lipu ni li pona tawa sina li musi tawa sina.
         <br>mi tawa a!</p>
-        <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
     </div>
     </body>
