--- a/nimi-mute/jan.html
+++ b/nimi-mute/jan.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>jan</b></h1>
+        <h1>jan</h1>
         <p style="font-size: large; padding: 10px">
         jan li suli.
         <br>jan li ken sona e ijo mute.
@@ -69,6 +69,6 @@
         <br>toki la o pona.
         <br>o jan pona.
         </p>
-        <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
     </div>
     </body>
