--- a/nimi-mute/len-pi-laso-telo.html
+++ b/nimi-mute/len-pi-laso-telo.html
@@ -8,7 +8,7 @@
 
     <body><div class="container">
 
-        <h1><b>len pi laso telo</b></h1>
+        <h1>len pi laso telo</h1>
         <p style="font-size: large; padding: 10px">
         toki a.
         <br>mi lon tomo tawa telo suli tan ni: mi tawa tomo pi jan majuna mi.
@@ -98,6 +98,6 @@
         <br>ni la toki mi li pini.
         <br>ken la, mi toki lon suno kama.
         <br>mi tawa a...</p>
-        <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
     </div>
     </body>
