--- a/nimi-mute/tomo-ni.html
+++ b/nimi-mute/tomo-ni.html
@@ -8,7 +8,7 @@
 
     <body><div class="centered-container">
 
-        <h1><b>tomo ni</b></h1>
+        <h1>tomo ni</h1>
         <p style="font-size: large; padding: 10px">
         tomo ni li suli a
         <br>sinpin ona li laso telo walo
@@ -27,6 +27,6 @@
         <br>mi ken lukin e telo suli kin
         <br>tomo ni li pona mute tawa mi a
         </p>
-        <p><a href="/mute-ante/nimi-mute"> ⇤ o tawa monsi</a></p>
+        <p> ⇤ <a href="/mute-ante/nimi-mute">o tawa monsi</a></p>
     </div>
     </body>
