--- a/musicians.html
+++ b/musicians.html
@@ -9,55 +9,55 @@
 
     <body><div class="centered-container">
 
-        <h1><b>→ favorite musicians</b></h1>
+        <h1>→ favorite musicians</h1>
         <ul>
-            <li><a href="https://gingerroot.bandcamp.com/" class="bandcamp"><b>
-                Ginger Root/Cameron Lew</b></a>: agressive elevator soul and city pop bops<br></li>
-            <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" class="spotify"><b>
-                Tame Impala</b></a>: awesome psychedelic pop<br></li>
-            <li><a href="https://open.spotify.com/artist/1lfkgC6uwLGN8qsvoaRgzT" class="spotify"><b>
-                The Bob Davis Group</b></a>: calm and beautiful jazz<br></li>
-            <li><a href="https://zelmastone.bandcamp.com/" class="bandcamp"><b>
-                Zelma Stone</b></a>: delightful bedroom pop<br></li>
-            <li><a href="https://xahoy.bandcamp.com/" class="bandcamp"><b>
-                Ahoy/Stuart Brown</b></a>: overly good videogame doc bgm<br></li>
-            <li><a href="https://posy.bandcamp.com/" class="bandcamp"><b>
-                Posy</b></a>: like Ahoy, also makes great youtube content<br></li>
-            <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" class="spotify"><b>
-                Polo & Pan</b></a>: french house bops<br></li>
-            <li><a href="https://open.spotify.com/artist/77ZUbcdoU5KCPHNUl8bgQy" class="spotify"><b>
-                João Gilberto</b></a> and
-            <a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" class="spotify"><b>
-                Tom Jobim</b></a>: awesome blend of bossa nova and jazz<br></li>
-            <li><a href="https://open.spotify.com/artist/4xJbCqwNfYlbl8v026L24T" class="spotify"><b>
-                Alan Hawkshaw</b></a>: great bgm/library music<br></li>
-            <li><a href="https://sevish.bandcamp.com/" class="bandcamp"><b>
-                Sevish</b></a>: electronic microtonal/xenharmonic music<br></li>
-            <li><a href="https://jackstauber.bandcamp.com/" class="bandcamp"><b>
-                Jack Stauber</b></a>: needs no explanation<br></li>
-            <li><b>Honorable Mentions: </b>
-                <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" class="spotify"><b>
-                    Astrud Gilberto</b></a>, 
-                <a href="https://dusternumero.bandcamp.com/" class="bandcamp"><b>
-                    Duster</b></a>, 
-                <a href="https://music.midwestcollective.us/album/odyssey" class="bandcamp"><b>
-                    HOME</b></a>, 
-                <a href="https://macroblank.bandcamp.com" class="bandcamp"><b>
-                    Macroblank</b></a>, 
-                <a href="https://open.spotify.com/artist/6tOsSffQQIXmK8TqsDck8t" class="spotify"><b>
-                    Chico Buarque</b></a>, 
-                <a href="https://open.spotify.com/artist/7oEkUINVIj1Nr3Wnj8tzqr" class="spotify"><b>
-                    Gilberto Gil</b></a>, 
-                <a href="https://open.spotify.com/artist/0dAZ2slrElfR0Y5flcoSPt" class="spotify"><b>
-                    Dorothy Ashby</b></a>, 
-                <a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" class="bandcamp"><b>
-                    Tally Hall</b></a>, 
-                <a href="https://open.spotify.com/artist/73JBR5s2PVvUjGu6tIqjqx" class="spotify"><b>
-                    Walter Murphy</b></a>, 
-                <a href="https://open.spotify.com/artist/78cT0dM5Ivm722EP2sgfDh" class="spotify"><b>
-                    Bill Wurtz</b></a> and 
-                <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" class="spotify"><b>
-                    João Donato</b></a>
+            <li><a href="https://gingerroot.bandcamp.com/" class="bandcamp">
+                Ginger Root/Cameron Lew</a>: agressive elevator soul and city pop bops<br></li>
+            <li><a href="https://open.spotify.com/artist/5INjqkS1o8h1imAzPqGZBb" class="spotify">
+                Tame Impala</a>: awesome psychedelic pop<br></li>
+            <li><a href="https://open.spotify.com/artist/1lfkgC6uwLGN8qsvoaRgzT" class="spotify">
+                The Bob Davis Group</a>: calm and beautiful jazz<br></li>
+            <li><a href="https://zelmastone.bandcamp.com/" class="bandcamp">
+                Zelma Stone</a>: delightful bedroom pop<br></li>
+            <li><a href="https://xahoy.bandcamp.com/" class="bandcamp">
+                Ahoy/Stuart Brown</a>: overly good videogame doc bgm<br></li>
+            <li><a href="https://posy.bandcamp.com/" class="bandcamp">
+                Posy</a>: like Ahoy, also makes great youtube content<br></li>
+            <li><a href="https://open.spotify.com/artist/45yEuthJ9yq1rNXAOpBnqM" class="spotify">
+                Polo & Pan</a>: french house bops<br></li>
+            <li><a href="https://open.spotify.com/artist/77ZUbcdoU5KCPHNUl8bgQy" class="spotify">
+                João Gilberto</a> and
+            <a href="https://open.spotify.com/artist/3pO5VjZ4wOHCMBXOvbMISG" class="spotify">
+                Tom Jobim</a>: awesome blend of bossa nova and jazz<br></li>
+            <li><a href="https://open.spotify.com/artist/4xJbCqwNfYlbl8v026L24T" class="spotify">
+                Alan Hawkshaw</a>: great bgm/library music<br></li>
+            <li><a href="https://sevish.bandcamp.com/" class="bandcamp">
+                Sevish</a>: electronic microtonal/xenharmonic music<br></li>
+            <li><a href="https://jackstauber.bandcamp.com/" class="bandcamp">
+                Jack Stauber</a>: needs no explanation<br></li>
+            <li>Honorable Mentions: 
+                <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" class="spotify">
+                    Astrud Gilberto</a>, 
+                <a href="https://dusternumero.bandcamp.com/" class="bandcamp">
+                    Duster</a>, 
+                <a href="https://music.midwestcollective.us/album/odyssey" class="bandcamp">
+                    HOME</a>, 
+                <a href="https://macroblank.bandcamp.com" class="bandcamp">
+                    Macroblank</a>, 
+                <a href="https://open.spotify.com/artist/6tOsSffQQIXmK8TqsDck8t" class="spotify">
+                    Chico Buarque</a>, 
+                <a href="https://open.spotify.com/artist/7oEkUINVIj1Nr3Wnj8tzqr" class="spotify">
+                    Gilberto Gil</a>, 
+                <a href="https://open.spotify.com/artist/0dAZ2slrElfR0Y5flcoSPt" class="spotify">
+                    Dorothy Ashby</a>, 
+                <a href="https://needlejuice.bandcamp.com/album/marvins-marvelous-mechanical-museum" class="bandcamp">
+                    Tally Hall</a>, 
+                <a href="https://open.spotify.com/artist/73JBR5s2PVvUjGu6tIqjqx" class="spotify">
+                    Walter Murphy</a>, 
+                <a href="https://open.spotify.com/artist/78cT0dM5Ivm722EP2sgfDh" class="spotify">
+                    Bill Wurtz</a> and 
+                <a href="https://open.spotify.com/artist/17wDxPR2GcU3r1dpCoCiUi" class="spotify">
+                    João Donato</a>
             </ul>
-        <p><a href="/mute-ante"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
