--- a/musicians.html
+++ b/musicians.html
@@ -35,7 +35,7 @@
                 Sevish</a>: electronic microtonal/xenharmonic music<br></li>
             <li><a href="https://jackstauber.bandcamp.com/" class="bandcamp">
                 Jack Stauber</a>: needs no explanation<br></li>
-            <li>Honorable Mentions: 
+            <li><b>Honorable Mentions</b>: 
                 <a href="https://open.spotify.com/artist/5rX2c1zow6hCph8PnnU3kF" class="spotify">
                     Astrud Gilberto</a>, 
                 <a href="https://dusternumero.bandcamp.com/" class="bandcamp">
