--- a/difference.html
+++ b/difference.html
@@ -21,7 +21,7 @@
 
     <body><div class="this-container">
 
-        <h1><b>→ about difference in general</b></h1>
+        <h1>→ about difference in general</h1>
         <figure><blockquote>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
             <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
@@ -38,6 +38,6 @@
             <br>
             <br>If you have anything to say about this, <i>bad or good</i>, or if i'm forgetting something, please dm me through <a href="http://discordapp.com/users/691348576093077535" class="discord"><b>discord</b></a>.
         </blockquote></figure><br>
-        <p><a href="/mute-ante"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div>
     </body>
