--- a/blender.html
+++ b/blender.html
@@ -18,12 +18,12 @@
     </style></head>
 
     <body><div class="container">
-        <h1><b>→ some things made in blender</b></h1>
+        <h1>→ some things made in blender</h1>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. These are 8 of them.
             <br>btw, all the images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
-            <li><b><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></b></li>
+            <li><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></li>
         </ul>
         <img src="/mute-ante/blenders/ampersand.png" alt="ampersand" width="100%">
         <img src="/mute-ante/blenders/angle2.png" alt="angle2" width="100%">
@@ -34,5 +34,5 @@
         <img src="/mute-ante/blenders/lines.png" alt="lines" width="100%">
         <img src="/mute-ante/blenders/square.png" alt="square" width="100%">
 
-        <p><a href="/mute-ante"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
