--- a/websites/geo.html
+++ b/websites/geo.html
@@ -8,19 +8,19 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="centered-container">
-        <h1><b>→ geography and flags</b></h1><br>
+        <h1>→ geography and flags</h1><br>
 
-        <h2><b>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></b></h2>
-        <p>An awesome visualization by Jason Davies of many map projections. <a href="https://www.jasondavies.com/maps/"><b>Their website</b></a> also has many other cool map stuffs.</p>
+        <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
+        <p>An awesome visualization by Jason Davies of many map projections. <a href="https://www.jasondavies.com/maps/">Their website</a> also has many other cool map stuffs.</p>
 
-        <h2><b>→ <a href="https://en.wikipedia.org/wiki/List_of_Japanese_flags">List of Japanese Flags</a></b></h2>
+        <h2>→ <a href="https://en.wikipedia.org/wiki/List_of_Japanese_flags">List of Japanese Flags</a></h2>
         <p>A lot of really beautiful flags, especially the prefectural flags.</p>
 
-        <h2><b>→ <a href="https://commons.wikimedia.org/wiki/Gallery_of_flags_by_design">Gallery of flags by design</a></b></h2>
+        <h2>→ <a href="https://commons.wikimedia.org/wiki/Gallery_of_flags_by_design">Gallery of flags by design</a></h2>
         <p>A TON of flags sorted by what design feature they have, like crosses, stars or colors.</p>
 
-        <h2><b>→ <a href="https://heywhatsthat.com/">HeyWhatsThat</a></b></h2>
+        <h2>→ <a href="https://heywhatsthat.com/">HeyWhatsThat</a></h2>
         <p>A neat tool that shows how far you can see from a location, as well as what peaks can be seen.</p>
 
-        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante/websites">go back</a></p>
     </div></body>
