--- a/websites/lang.html
+++ b/websites/lang.html
@@ -8,22 +8,22 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1><b>→ language</b></h1><br>
+        <h1>→ language</h1><br>
 
-        <h2><b>→ <a href="https://decodeunicode.org/">decodeunicode</a></b></h2>
+        <h2>→ <a href="https://decodeunicode.org/">decodeunicode</a></h2>
         <p>A site with characters from a TON of languages from all around the world, as encoded by Unicode 11.0 (kinda out of date but still awesome). By Johhannes Bergerhausen and Siri Poarangan.</p>
 
-        <h2><b>→ <a href="https://www.ethnologue.com/">Ethnologue</a></b></h2>
+        <h2>→ <a href="https://www.ethnologue.com/">Ethnologue</a></h2>
         <p>A collection of the over 7000 of the world's known languages, kept by the people at SIL International.</p>
 
-        <h2><b>→ <a href="https://www.merriam-webster.com/time-traveler/">Time Traveller by Merriam-Webster</a></b></h2>
+        <h2>→ <a href="https://www.merriam-webster.com/time-traveler/">Time Traveller by Merriam-Webster</a></h2>
         <p>A website that shows what words were first used in print for each year.</p>
 
-        <h2><b>→ <a href="https://ipa.typeit.org/full/">Type IPA phonetic symbols</a></b></h2>
+        <h2>→ <a href="https://ipa.typeit.org/full/">Type IPA phonetic symbols</a></h2>
         <p>Type with every phonetic symbol in the IPA or choose from a bunch of languages, by Tomasz P. Szynalski.</p>
 
-        <h2><b>→ <a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></b></h2>
+        <h2>→ <a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></h2>
         <p>A paper by José Hernández-Orallo with a way to write English with unambiguous spelling.</p>
 
-        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante/websites">go back</a></p>
     </div></body>
