--- a/websites/misc.html
+++ b/websites/misc.html
@@ -8,40 +8,40 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1><b>→ miscellaneously interesting</b></h1><br>
+        <h1>→ miscellaneously interesting</h1><br>
 
-        <h2><b>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></b></h2>
+        <h2>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
         <p>A live feed of the lovely sea otters at Monterey Bay Aquarium.</p>
 
-        <h2><b>→ <a href="https://spacedashboard.com/">Space Dashboard</a></b></h2>
+        <h2>→ <a href="https://spacedashboard.com/">Space Dashboard</a></h2>
         <p>A live view of space from the ISS. Made by Caleb.</p>
 
-        <h2><b>→ <a href="https://molview.org/">OneZoom</a></b></h2>
+        <h2>→ <a href="https://molview.org/">OneZoom</a></h2>
         <p>Zoom through a branching tree of every living species on Earth.</p>
 
-        <h2><b>→ <a href="https://artsandculture.google.com/">Google Arts & Culture</a></b></h2>
+        <h2>→ <a href="https://artsandculture.google.com/">Google Arts & Culture</a></h2>
         <p>Browse through thousands of art pieces from many places, times and styles. Basically a giant online museum.</p>
 
-        <h2><b>→ <a href="https://tasvideos.org/">TASVideos</a></b></h2>
+        <h2>→ <a href="https://tasvideos.org/">TASVideos</a></h2>
         <p>Look at tons of videogames being played perfectly with the help of tools (Tool-assisted speedrunning).</p>
 
-        <h2><b>→ <a href="https://molview.org/">MolView</a></b></h2>
+        <h2>→ <a href="https://molview.org/">MolView</a></h2>
         <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!.</p>
 
-        <h2><b>→ <a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></b></h2>
-        <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. <b>Please don't go here if you are sensitive to fast movement and flashing images and stuff.</b></p>
+        <h2>→ <a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></h2>
+        <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. Please don't go here if you are sensitive to fast movement and flashing images and stuff.</p>
 
-        <h2><b>→ <a href="https://standardsmanual.com/">Standards Manual</a></b></h2>
+        <h2>→ <a href="https://standardsmanual.com/">Standards Manual</a></h2>
         <p>Reprints of old graphics standards manuals and other cool design things. By Jesse Reed and Hamish Smyth.</p>
 
-        <h2><b>→ <a href="https://625.uk.com/">Andrew Wiseman's Television Room</a></b></h2>
+        <h2>→ <a href="https://625.uk.com/">Andrew Wiseman's Television Room</a></h2>
         <p>A site full of stuff about british TV, including logo histories, recreated idents and clocks as well as other stuff.</p>
 
-        <h2><b>→ <a href="https://dood.al/pinktrombone/">Pink Trombone</a></b></h2>
+        <h2>→ <a href="https://dood.al/pinktrombone/">Pink Trombone</a></h2>
         <p>Make a voice speak by moving the cursor around. By Neil Thapen.</p>
 
-        <h2><b>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></b></h2>
+        <h2>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
 
-        <p><a href="/mute-ante/websites"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante/websites">go back</a></p>
     </div></body>
