--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -17,12 +17,12 @@
     </style></head>
 
     <body><div class="container">
-        <h1><b>→ pyramids</b></h1><br>
+        <h1>→ pyramids</h1><br>
 
         <img src="/mute-ante/blenders/pyramids/pyramids.png" alt="pyramids" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids2.png" alt="pyramids2" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids3.png" alt="pyramids3" width="100%">
         <img src="/mute-ante/blenders/pyramids/pyramids4.png" alt="pyramids4" width="100%">
 
-        <p><a href="/mute-ante/blender"> ⇤ go back</a></p>
+        <p> ⇤ <a href="/mute-ante/blender">go back</a></p>
     </div></body>
