--- a/sitelog.html
+++ b/sitelog.html
@@ -9,6 +9,8 @@
 
     <body><div class="container">
         <h1>→ sitelog</h1><br>
+        <h2>→ 14/8/2022 13:59</h2>
+        <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
         <h2>→ 14/8/2022 13:09</h2>
         <p>I added some more blender things with purple/blue and yellow pyramids.</p>
         <h2>→ 12/8/2022 19:12</h2>
