added links to site log

--- a/sitelog.html
+++ b/sitelog.html
@@ -5,17 +5,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
+            .pyramid{
+                background-color: #000429; 
+                color:#e1c185}
+            .pyramid:hover{
+                background-color: #e1c185; 
+                color:#000429}
+        </style></head>
 
     <body><div class="container">
         <h1>→ sitelog</h1><br>
         <h2>→ 14/8/2022 13:59</h2>
         <p>Ok so, i made all links bold from the css files, but that meant having to remove almost ALL the bold tags from all the pages... That took 50 minutes?? jeez...</p>
         <h2>→ 14/8/2022 13:09</h2>
-        <p>I added some more blender things with purple/blue and yellow pyramids.</p>
+        <p>I added <a href="/mute-ante/blenders/pyramids" class="pyramid">some more blender things</a> with purple/blue and yellow pyramids.</p>
         <h2>→ 12/8/2022 19:12</h2>
         <p>Changed the index layout some. I think it's better.</p>
         <h2>→ 12/8/2022 17:42</h2>
-        <p>I just added the blender images and now this log so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
+        <p>I just added the <a href="/mute-ante/blender">blender images</a> and now <a href="/mute-ante/sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
         <p> ⇤ <a href="/mute-ante">go back</a></p>
     </div></body>
