--- a/blender.html
+++ b/blender.html
@@ -19,7 +19,7 @@
 
     <body><div class="container">
         <h1>→ some things made in blender</h1>
-        <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. These are 8 of them.
+        <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. These are a bunch of them.
             <br>btw, all the images (just like the rest of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
