changed yellow color

--- a/sitelog.html
+++ b/sitelog.html
@@ -8,9 +8,9 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .pyramid{
                 background-color: #000429; 
-                color:#e1c185}
+                color:#ddba39}
             .pyramid:hover{
-                background-color: #e1c185; 
+                background-color: #ddba39; 
                 color:#000429}
         </style></head>
 
