--- a/blender.html
+++ b/blender.html
@@ -10,9 +10,9 @@
 
         .pyramid{
             background-color: #000429; 
-            color:#e1c185}
+            color:#ddba39}
         .pyramid:hover{
-            background-color: #e1c185; 
+            background-color: #ddba39; 
             color:#000429}
 
     </style></head>
