--- a/blenders/pyramids.html
+++ b/blenders/pyramids.html
@@ -10,9 +10,9 @@
     <style>
         body {
         background-color: #000429;
-        color: #e1c185;}
+        color: #ddba39;}
         .container{
-            border: solid #e1c185 2px;}
+            border: solid #ddba39 2px;}
         a{color: #f0f0f0; background-color: #080808;}
     </style></head>
 
