changed link hover color

--- a/blender.html
+++ b/blender.html
@@ -13,7 +13,8 @@
             color:#ddba39}
         .pyramid:hover{
             background-color: #ddba39; 
-            color:#000429}
+            color:#000429;
+            text-decoration-color: #ddba39;}
 
     </style></head>
 
