--- a/sitelog.html
+++ b/sitelog.html
@@ -11,7 +11,8 @@
                 color:#ddba39}
             .pyramid:hover{
                 background-color: #ddba39; 
-                color:#000429}
+                color:#000429;
+                text-decoration-color: #ddba39}
         </style></head>
 
     <body><div class="container">
