--- a/blender.html
+++ b/blender.html
@@ -21,7 +21,7 @@
     <body><div class="container">
         <h1>→ some things made in blender</h1>
         <p>One of my favorite passtimes is making things (mainly wallpapers) with Blender. Very geometric and consisting of simple lighting and shapes and little to no color. These are a bunch of them.
-            <br>btw, all the images (just like all of the site) are licenced under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
+            <br>btw, all the images (just like all of the site) are licensed under <a href="/mute-ante/LICENSE.txt">GPLv3</a>.
         </p>
         <ul>
             <li><a href="/mute-ante/blenders/pyramids" class="pyramid">pyramids (4)</a></li>
