--- a/websites/misc.html
+++ b/websites/misc.html
@@ -29,7 +29,7 @@
         <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!.</p>
 
         <h2>→ <a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></h2>
-        <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. Please don't go here if you are sensitive to fast movement and flashing images and stuff.</p>
+        <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. <b>Please don't go here if you are sensitive to fast movement and flashing images and stuff.</b></p>
 
         <h2>→ <a href="https://standardsmanual.com/">Standards Manual</a></h2>
         <p>Reprints of old graphics standards manuals and other cool design things. By Jesse Reed and Hamish Smyth.</p>
