--- a/websites/misc.html
+++ b/websites/misc.html
@@ -26,7 +26,7 @@
         <p>Look at tons of videogames being played perfectly with the help of tools (Tool-assisted speedrunning).</p>
 
         <h2>→ <a href="https://molview.org/">MolView</a></h2>
-        <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!.</p>
+        <p>A site by Herman Bergwerf that lets you build organic molecules and visualize them in 3D!</p>
 
         <h2>→ <a href="https://michaelbach.de/ot/">Optical Illusions & Visual Phenomena</a></h2>
         <p>A collection by Michael Bach with 148 fun optical illusions and explanations where possible. <b>Please don't go here if you are sensitive to fast movement and flashing images and stuff.</b></p>
