--- a/blenders/cmyk.html
+++ b/blenders/cmyk.html
@@ -8,7 +8,7 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
     <body><div class="container">
-        <h1>→ <span style="color:#05a1fc">c</apan><span style="color:#fc074c">m</span><span style="color:#ffb400">y</span>k</h1><br>
+        <h1>→ <span style="color:#05a1fc">c</span><span style="color:#fc074c">m</span><span style="color:#ffb400">y</span>k</h1><br>
 
         <img src="/mute-ante/blenders/cmyk/cmyk.png" alt="cmyk" width="100%">
         <img src="/mute-ante/blenders/cmyk/cmyk2.png" alt="cmyk2" width="100%">
